Missing generator for Visual Studio "15"
There is no generator available for the new/upcoming Visual Studio "15" (https://www.visualstudio.com/en-us/downloads/visual-studio-next-downloads-vs.aspx)
There is no generator available for the new/upcoming Visual Studio "15" (https://www.visualstudio.com/en-us/downloads/visual-studio-next-downloads-vs.aspx)