Help/release/dev/vs-15-generator.rst
@@ -1,0 +1,4 @@
+vs-15-generator
+---------------
+
+* The :generator:`Visual Studio 15` generator was added.
